[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
pyo3 = { version = "0.18.3", path = "..", features = ["auto-initialize", "extension-module"] }

[[example]]
name = "decorator"
path = "decorator/src/lib.rs"
crate_type = ["cdylib"]
doc-scrape-examples = true
