[package]
name = "pyo3-build-config"
version = "0.28.2"
description = "Build configuration for the PyO3 ecosystem"
authors = ["PyO3 Project and Contributors <https://github.com/PyO3>"]
keywords = ["pyo3", "python", "cpython", "ffi"]
homepage = "https://github.com/pyo3/pyo3"
repository = "https://github.com/pyo3/pyo3"
categories = ["api-bindings", "development-tools::ffi"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
python3-dll-a = { version = "0.2.12", optional = true }
target-lexicon = "0.13.3"

[build-dependencies]
python3-dll-a = { version = "0.2.12", optional = true }
target-lexicon = "0.13.3"

[features]
default = []

# deprecated
resolve-config = []

# deprecated
extension-module = []

# Automatically generates `python3.dll` import libraries for Windows targets.
generate-import-lib = ["dep:python3-dll-a"]
