[package]
name = "pyo3-build-config"
version = "0.28.3"
description = "Build configuration for the PyO3 ecosystem"
authors = ["PyO3 Project and Contributors <https://github.com/PyO3>"]
keywords = ["pyo3", "python", "cpython", "ffi"]
homepage = "https://github.com/pyo3/pyo3"
repository = "https://github.com/pyo3/pyo3"
categories = ["api-bindings", "development-tools::ffi"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
target-lexicon = "0.13.3"

[build-dependencies]
target-lexicon = "0.13.3"

[features]
default = []

# deprecated
resolve-config = []

# deprecated
extension-module = []

# deprecated: no longer needed, raw-dylib is used instead
generate-import-lib = []
