[package]
name = "pyo3-ffi-check"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pyo3-ffi-check-definitions = { path = "definitions" }
pyo3-ffi-check-macro = { path = "macro" }

[build-dependencies]
# this guarantees the build.rs reruns if the definitions change
pyo3-ffi-check-definitions = { path = "definitions" }

[workspace]
members = [
    "definitions",
    "macro"
]
